--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
-		<title>Catisa_Aviation</title>
+		<title>Catisa Aviation</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
 
