--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body.custom-background { background-image: url("./Catisa_Aviation_files/Airplane
 
 
 <div class="wp-block-buttons is-content-justification-center is-layout-flex wp-container-core-buttons-layout-1 wp-block-buttons-is-layout-flex">
-<div class="wp-block-button has-custom-width wp-block-button__width-25" id="sendmail"><a class="wp-block-button__link wp-element-button" href="mailto:sales@catisaaviation.es" style="border-style:none;border-width:0px;border-radius:20px;padding-top:var(--wp--preset--spacing--20);padding-right:0;padding-bottom:var(--wp--preset--spacing--20);padding-left:0" target="_blank" rel="noreferrer noopener"><strong>sales@catisaaviation.es</strong></a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-25" id="sendmail"><a class="wp-block-button__link wp-element-button" href="mailto:sales@catisaaviation.es" style="border-style:none;border-width:0px;border-radius:20px;padding-top:var(--wp--preset--spacing--20);padding-right:0;padding-bottom:var(--wp--preset--spacing--20);padding-left:0" rel="noreferrer noopener"><strong>sales@catisaaviation.es</strong></a></div>
 </div>
 
 
